--- a/T_Rex/index.html
+++ b/T_Rex/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>T-Rex Game</title>
+    <link rel="stylesheet" href=".\CSS\main.css">
+    <script src=".\app.js" charset="utf-8"></script>
 </head>
 <body>
-    
+    <h2 id="alert"></h2>
+    <div class="grid">
+        <div class="dino"></div>
+    </div>
+
 </body>
 </html>
