--- a/T_Rex/index.html
+++ b/T_Rex/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="sp" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <title>T-Rex Game</title>
@@ -7,10 +7,11 @@
     <script src=".\app.js" charset="utf-8"></script>
 </head>
 <body>
-    <h2 id="alert"></h2>
-    <div class="grid">
-        <div class="dino"></div>
+    <div id="desert">
+        <h2 id="alert"></h2>
+        <div class="grid">
+            <div class="dino"></div>
+        </div>
     </div>
-
 </body>
 </html>
